db_run/c++_build/antlr4cpp_generated_src/antlrcpptest/dmlParser.cpp

// Generated from /home/ubuntu/workspace/Project 3/Parser/c++_src/dml.g4 by ANTLR 4.7


#include "dmlVisitor.h"

#include "dmlParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;
using namespace antlr4;

dmlParser::dmlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

dmlParser::~dmlParser() {
  delete _interpreter;
}

std::string dmlParser::getGrammarFileName() const {
  return "dml.g4";
}

const std::vector<std::string>& dmlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& dmlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

dmlParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dmlParser::QueryContext *> dmlParser::ProgramContext::query() {
  return getRuleContexts<dmlParser::QueryContext>();
}

dmlParser::QueryContext* dmlParser::ProgramContext::query(size_t i) {
  return getRuleContext<dmlParser::QueryContext>(i);
}

std::vector<dmlParser::CommandContext *> dmlParser::ProgramContext::command() {
  return getRuleContexts<dmlParser::CommandContext>();
}

dmlParser::CommandContext* dmlParser::ProgramContext::command(size_t i) {
  return getRuleContext<dmlParser::CommandContext>(i);
}


size_t dmlParser::ProgramContext::getRuleIndex() const {
  return dmlParser::RuleProgram;
}

antlrcpp::Any dmlParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::ProgramContext* dmlParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, dmlParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(70);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case dmlParser::ALPHA: {
          setState(68);
          query();
          break;
        }

        case dmlParser::T__15:
        case dmlParser::T__16:
        case dmlParser::T__17:
        case dmlParser::T__18:
        case dmlParser::T__19:
        case dmlParser::T__20:
        case dmlParser::T__22:
        case dmlParser::T__26:
        case dmlParser::T__29: {
          setState(69);
          command();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(72); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << dmlParser::T__15)
      | (1ULL << dmlParser::T__16)
      | (1ULL << dmlParser::T__17)
      | (1ULL << dmlParser::T__18)
      | (1ULL << dmlParser::T__19)
      | (1ULL << dmlParser::T__20)
      | (1ULL << dmlParser::T__22)
      | (1ULL << dmlParser::T__26)
      | (1ULL << dmlParser::T__29)
      | (1ULL << dmlParser::ALPHA))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryContext ------------------------------------------------------------------

dmlParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::Relation_nameContext* dmlParser::QueryContext::relation_name() {
  return getRuleContext<dmlParser::Relation_nameContext>(0);
}

dmlParser::ExprContext* dmlParser::QueryContext::expr() {
  return getRuleContext<dmlParser::ExprContext>(0);
}


size_t dmlParser::QueryContext::getRuleIndex() const {
  return dmlParser::RuleQuery;
}

antlrcpp::Any dmlParser::QueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitQuery(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::QueryContext* dmlParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 2, dmlParser::RuleQuery);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    relation_name();
    setState(75);
    match(dmlParser::T__0);
    setState(76);
    expr();
    setState(77);
    match(dmlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Relation_nameContext ------------------------------------------------------------------

dmlParser::Relation_nameContext::Relation_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::IdentifierContext* dmlParser::Relation_nameContext::identifier() {
  return getRuleContext<dmlParser::IdentifierContext>(0);
}


size_t dmlParser::Relation_nameContext::getRuleIndex() const {
  return dmlParser::RuleRelation_name;
}

antlrcpp::Any dmlParser::Relation_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitRelation_name(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::Relation_nameContext* dmlParser::relation_name() {
  Relation_nameContext *_localctx = _tracker.createInstance<Relation_nameContext>(_ctx, getState());
  enterRule(_localctx, 4, dmlParser::RuleRelation_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

dmlParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> dmlParser::IdentifierContext::ALPHA() {
  return getTokens(dmlParser::ALPHA);
}

tree::TerminalNode* dmlParser::IdentifierContext::ALPHA(size_t i) {
  return getToken(dmlParser::ALPHA, i);
}

std::vector<tree::TerminalNode *> dmlParser::IdentifierContext::DIGIT() {
  return getTokens(dmlParser::DIGIT);
}

tree::TerminalNode* dmlParser::IdentifierContext::DIGIT(size_t i) {
  return getToken(dmlParser::DIGIT, i);
}


size_t dmlParser::IdentifierContext::getRuleIndex() const {
  return dmlParser::RuleIdentifier;
}

antlrcpp::Any dmlParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::IdentifierContext* dmlParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 6, dmlParser::RuleIdentifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(dmlParser::ALPHA);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << dmlParser::T__2)
      | (1ULL << dmlParser::ALPHA)
      | (1ULL << dmlParser::DIGIT))) != 0)) {
      setState(82);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << dmlParser::T__2)
        | (1ULL << dmlParser::ALPHA)
        | (1ULL << dmlParser::DIGIT))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

dmlParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::Atomic_exprContext* dmlParser::ExprContext::atomic_expr() {
  return getRuleContext<dmlParser::Atomic_exprContext>(0);
}

dmlParser::SelectionContext* dmlParser::ExprContext::selection() {
  return getRuleContext<dmlParser::SelectionContext>(0);
}

dmlParser::ProjectionContext* dmlParser::ExprContext::projection() {
  return getRuleContext<dmlParser::ProjectionContext>(0);
}

dmlParser::RenamingContext* dmlParser::ExprContext::renaming() {
  return getRuleContext<dmlParser::RenamingContext>(0);
}

dmlParser::Union1Context* dmlParser::ExprContext::union1() {
  return getRuleContext<dmlParser::Union1Context>(0);
}

dmlParser::DifferenceContext* dmlParser::ExprContext::difference() {
  return getRuleContext<dmlParser::DifferenceContext>(0);
}

dmlParser::ProductContext* dmlParser::ExprContext::product() {
  return getRuleContext<dmlParser::ProductContext>(0);
}

dmlParser::Natural_joinContext* dmlParser::ExprContext::natural_join() {
  return getRuleContext<dmlParser::Natural_joinContext>(0);
}


size_t dmlParser::ExprContext::getRuleIndex() const {
  return dmlParser::RuleExpr;
}

antlrcpp::Any dmlParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::ExprContext* dmlParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 8, dmlParser::RuleExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(96);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      atomic_expr();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(89);
      selection();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(90);
      projection();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(91);
      renaming();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(92);
      union1();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(93);
      difference();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(94);
      product();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(95);
      natural_join();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Atomic_exprContext ------------------------------------------------------------------

dmlParser::Atomic_exprContext::Atomic_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t dmlParser::Atomic_exprContext::getRuleIndex() const {
  return dmlParser::RuleAtomic_expr;
}

void dmlParser::Atomic_exprContext::copyFrom(Atomic_exprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AtomicParensContext ------------------------------------------------------------------

dmlParser::ExprContext* dmlParser::AtomicParensContext::expr() {
  return getRuleContext<dmlParser::ExprContext>(0);
}

dmlParser::AtomicParensContext::AtomicParensContext(Atomic_exprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any dmlParser::AtomicParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitAtomicParens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AtomicRelationNameContext ------------------------------------------------------------------

dmlParser::Relation_nameContext* dmlParser::AtomicRelationNameContext::relation_name() {
  return getRuleContext<dmlParser::Relation_nameContext>(0);
}

dmlParser::AtomicRelationNameContext::AtomicRelationNameContext(Atomic_exprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any dmlParser::AtomicRelationNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitAtomicRelationName(this);
  else
    return visitor->visitChildren(this);
}
dmlParser::Atomic_exprContext* dmlParser::atomic_expr() {
  Atomic_exprContext *_localctx = _tracker.createInstance<Atomic_exprContext>(_ctx, getState());
  enterRule(_localctx, 10, dmlParser::RuleAtomic_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case dmlParser::ALPHA: {
        _localctx = dynamic_cast<Atomic_exprContext *>(_tracker.createInstance<dmlParser::AtomicRelationNameContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(98);
        relation_name();
        break;
      }

      case dmlParser::T__3: {
        _localctx = dynamic_cast<Atomic_exprContext *>(_tracker.createInstance<dmlParser::AtomicParensContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(99);
        match(dmlParser::T__3);
        setState(100);
        expr();
        setState(101);
        match(dmlParser::T__4);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectionContext ------------------------------------------------------------------

dmlParser::SelectionContext::SelectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::ConditionContext* dmlParser::SelectionContext::condition() {
  return getRuleContext<dmlParser::ConditionContext>(0);
}

dmlParser::Atomic_exprContext* dmlParser::SelectionContext::atomic_expr() {
  return getRuleContext<dmlParser::Atomic_exprContext>(0);
}


size_t dmlParser::SelectionContext::getRuleIndex() const {
  return dmlParser::RuleSelection;
}

antlrcpp::Any dmlParser::SelectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitSelection(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::SelectionContext* dmlParser::selection() {
  SelectionContext *_localctx = _tracker.createInstance<SelectionContext>(_ctx, getState());
  enterRule(_localctx, 12, dmlParser::RuleSelection);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(dmlParser::T__5);
    setState(106);
    match(dmlParser::T__3);
    setState(107);
    condition();
    setState(108);
    match(dmlParser::T__4);
    setState(109);
    atomic_expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

dmlParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dmlParser::ConjunctionContext *> dmlParser::ConditionContext::conjunction() {
  return getRuleContexts<dmlParser::ConjunctionContext>();
}

dmlParser::ConjunctionContext* dmlParser::ConditionContext::conjunction(size_t i) {
  return getRuleContext<dmlParser::ConjunctionContext>(i);
}


size_t dmlParser::ConditionContext::getRuleIndex() const {
  return dmlParser::RuleCondition;
}

antlrcpp::Any dmlParser::ConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitCondition(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::ConditionContext* dmlParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 14, dmlParser::RuleCondition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    conjunction();
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == dmlParser::T__6) {
      setState(112);
      match(dmlParser::T__6);
      setState(113);
      conjunction();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConjunctionContext ------------------------------------------------------------------

dmlParser::ConjunctionContext::ConjunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<dmlParser::ComparisonContext *> dmlParser::ConjunctionContext::comparison() {
  return getRuleContexts<dmlParser::ComparisonContext>();
}

dmlParser::ComparisonContext* dmlParser::ConjunctionContext::comparison(size_t i) {
  return getRuleContext<dmlParser::ComparisonContext>(i);
}


size_t dmlParser::ConjunctionContext::getRuleIndex() const {
  return dmlParser::RuleConjunction;
}

antlrcpp::Any dmlParser::ConjunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitConjunction(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::ConjunctionContext* dmlParser::conjunction() {
  ConjunctionContext *_localctx = _tracker.createInstance<ConjunctionContext>(_ctx, getState());
  enterRule(_localctx, 16, dmlParser::RuleConjunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    comparison();
    setState(124);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == dmlParser::T__7) {
      setState(120);
      match(dmlParser::T__7);
      setState(121);
      comparison();
      setState(126);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparisonContext ------------------------------------------------------------------

dmlParser::ComparisonContext::ComparisonContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t dmlParser::ComparisonContext::getRuleIndex() const {
  return dmlParser::RuleComparison;
}

void dmlParser::ComparisonContext::copyFrom(ComparisonContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ComparisonOperationContext ------------------------------------------------------------------

std::vector<dmlParser::OperandContext *> dmlParser::ComparisonOperationContext::operand() {
  return getRuleContexts<dmlParser::OperandContext>();
}

dmlParser::OperandContext* dmlParser::ComparisonOperationContext::operand(size_t i) {
  return getRuleContext<dmlParser::OperandContext>(i);
}

dmlParser::OpContext* dmlParser::ComparisonOperationContext::op() {
  return getRuleContext<dmlParser::OpContext>(0);
}

dmlParser::ComparisonOperationContext::ComparisonOperationContext(ComparisonContext *ctx) { copyFrom(ctx); }

antlrcpp::Any dmlParser::ComparisonOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitComparisonOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ComparisonParensContext ------------------------------------------------------------------

dmlParser::ConditionContext* dmlParser::ComparisonParensContext::condition() {
  return getRuleContext<dmlParser::ConditionContext>(0);
}

dmlParser::ComparisonParensContext::ComparisonParensContext(ComparisonContext *ctx) { copyFrom(ctx); }

antlrcpp::Any dmlParser::ComparisonParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitComparisonParens(this);
  else
    return visitor->visitChildren(this);
}
dmlParser::ComparisonContext* dmlParser::comparison() {
  ComparisonContext *_localctx = _tracker.createInstance<ComparisonContext>(_ctx, getState());
  enterRule(_localctx, 18, dmlParser::RuleComparison);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(135);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case dmlParser::WORD:
      case dmlParser::ALPHA:
      case dmlParser::DIGIT: {
        _localctx = dynamic_cast<ComparisonContext *>(_tracker.createInstance<dmlParser::ComparisonOperationContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(127);
        operand();
        setState(128);
        op();
        setState(129);
        operand();
        break;
      }

      case dmlParser::T__3: {
        _localctx = dynamic_cast<ComparisonContext *>(_tracker.createInstance<dmlParser::ComparisonParensContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(131);
        match(dmlParser::T__3);
        setState(132);
        condition();
        setState(133);
        match(dmlParser::T__4);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OpContext ------------------------------------------------------------------

dmlParser::OpContext::OpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t dmlParser::OpContext::getRuleIndex() const {
  return dmlParser::RuleOp;
}

antlrcpp::Any dmlParser::OpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitOp(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::OpContext* dmlParser::op() {
  OpContext *_localctx = _tracker.createInstance<OpContext>(_ctx, getState());
  enterRule(_localctx, 20, dmlParser::RuleOp);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << dmlParser::EQUAL)
      | (1ULL << dmlParser::NOTEQUAL)
      | (1ULL << dmlParser::GREATERTHAN)
      | (1ULL << dmlParser::LESSTHAN)
      | (1ULL << dmlParser::GREATERTHANOREQUAL)
      | (1ULL << dmlParser::LESSTHANOREQUAL))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperandContext ------------------------------------------------------------------

dmlParser::OperandContext::OperandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::Attribute_nameContext* dmlParser::OperandContext::attribute_name() {
  return getRuleContext<dmlParser::Attribute_nameContext>(0);
}

dmlParser::LiteralContext* dmlParser::OperandContext::literal() {
  return getRuleContext<dmlParser::LiteralContext>(0);
}


size_t dmlParser::OperandContext::getRuleIndex() const {
  return dmlParser::RuleOperand;
}

antlrcpp::Any dmlParser::OperandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitOperand(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::OperandContext* dmlParser::operand() {
  OperandContext *_localctx = _tracker.createInstance<OperandContext>(_ctx, getState());
  enterRule(_localctx, 22, dmlParser::RuleOperand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(141);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case dmlParser::ALPHA: {
        enterOuterAlt(_localctx, 1);
        setState(139);
        attribute_name();
        break;
      }

      case dmlParser::WORD:
      case dmlParser::DIGIT: {
        enterOuterAlt(_localctx, 2);
        setState(140);
        literal();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_nameContext ------------------------------------------------------------------

dmlParser::Attribute_nameContext::Attribute_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::IdentifierContext* dmlParser::Attribute_nameContext::identifier() {
  return getRuleContext<dmlParser::IdentifierContext>(0);
}


size_t dmlParser::Attribute_nameContext::getRuleIndex() const {
  return dmlParser::RuleAttribute_name;
}

antlrcpp::Any dmlParser::Attribute_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitAttribute_name(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::Attribute_nameContext* dmlParser::attribute_name() {
  Attribute_nameContext *_localctx = _tracker.createInstance<Attribute_nameContext>(_ctx, getState());
  enterRule(_localctx, 24, dmlParser::RuleAttribute_name);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

dmlParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* dmlParser::LiteralContext::WORD() {
  return getToken(dmlParser::WORD, 0);
}

dmlParser::IntegerContext* dmlParser::LiteralContext::integer() {
  return getRuleContext<dmlParser::IntegerContext>(0);
}


size_t dmlParser::LiteralContext::getRuleIndex() const {
  return dmlParser::RuleLiteral;
}

antlrcpp::Any dmlParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<dmlVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

dmlParser::LiteralContext* dmlParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 26, dmlParser::RuleLiteral);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(147);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case dmlParser::WORD: {
        enterOuterAlt(_localctx, 1);
        setState(145);
        match(dmlParser::WORD);
        break;
      }

      case dmlParser::DIGIT: {
        enterOuterAlt(_localctx, 2);
        setState(146);
        integer();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProjectionContext ------------------------------------------------------------------

dmlParser::ProjectionContext::ProjectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

dmlParser::Attribute_listContext* dmlParser::ProjectionContext::attribute_list() {
  return getRuleContext<dmlParser::Attribute_listContext>(0);
}

dmlParser::Atomic_exprContext* dmlParser::ProjectionContext::atomic_expr() {
  return getRuleContext<dmlParser::Atomic_exprContext>(0);
}


size_t dmlParser::ProjectionContext::getRuleIndex() const {
  return dmlParser::RuleProjection;
}
